# libcbdf

./: .gitignore  CMakeLists.txt  README.md  TODO
cmake/modules/: FindLZO.cmake  FindUUID-C++.cmake  FindXZ.cmake
src/: CMakeLists.txt  cbdf.cpp  lzma.cpp
src/include/: cbdf.h  lzma.hpp  xz.hpp
