cmake_minimum_required(VERSION 2.6)
project(cbdf)

FIND_PACKAGE(Boost)
FIND_PACKAGE(LibLZMA)

INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} ${LibLZMA_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/include)
LINK_DIRECTORIES(${LINK_DIRECTORIES} ${LibLZMA_INCLUDE_DIRS} ${Boost_LIBRARY_DIRS})

if(DEFINED CMAKE_INSTALL_PREFIX)
	message("Prefix defined ${CMAKE_INSTALL_PREFIX}")
endif()

add_subdirectory(src)

